# aigp-sdks

./: .gitignore  LICENSE  PUBLISHING.md  README.md
conformance/: validation-fixtures.tsv
dotnet/: AIGP.Sdk.csproj  README.md
dotnet/src/: AIGP.cs
dotnet/tests/AIGP.Sdk.SmokeTests/: AIGP.Sdk.SmokeTests.csproj  Program.cs
go/: README.md  aigp.go  aigp_test.go  go.mod
java/: README.md  pom.xml
java/src/main/java/org/open_aigp/sdk/: AIGP.java
java/src/test/java/org/open_aigp/sdk/: AIGPTest.java
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/org/open_aigp/sdk/: AIGP.kt
kotlin/src/test/kotlin/org/open_aigp/sdk/: AIGPTest.kt
python/: README.md  pyproject.toml
python/aigp/: __init__.py  attributes.py  baggage.py  cloudevents.py  decorators.py  events.py  golden_path.py  instrumentor.py  openlineage.py  reliability.py  signer.py  tracestate.py
python/aigp/openapi/: agentgp-golden-path.openapi.json
python/examples/: end_to_end.py  quickstart.py
python/tests/: test_attributes.py  test_baggage.py  test_cloudevents.py  test_conformance_fixtures.py  test_decorators.py  test_events.py  test_golden_path.py  test_merkle.py  test_new_events.py  test_openlineage.py  test_reliability.py  test_signer.py  test_tracestate.py  test_v080_features.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs
typescript/: README.md  index.d.ts  index.js  package.json
typescript/src/: index.ts
typescript/test/: index.test.js
